# dallinrobinson.github.io

./: .gitignore  _quarto.yml  about.md  blog.qmd  ds-portfolio.qmd  index.md  index.qmd  pyproject.toml  styles.css
docs/: about.html  blog.html  ds-portfolio.html  index.html  robots.txt  search.json  sitemap.xml
