[project]
name = "blog-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]
